data/derived/fa15/progs/unify/prog1173.ml.out
Characters 158-170:
  | _ -> (sum/10)::(sum mod 10)
                   ^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
